--- a/timeline-search.html
+++ b/timeline-search.html
@@ -21,14 +21,8 @@
       property="og:description"
       content="Grow your business with real-time reviews"
     />
-    <meta
-      property="og:image"
-      content="https://angry-goldberg-867093.netlify.app/assets/images/favicon.ico"
-    />
-    <meta
-      property="og:url"
-      content="https://angry-goldberg-867093.netlify.app/"
-    />
+    <meta property="og:image" content="assets/images/favicon.ico" />
+    <meta property="og:url" content="" />
     <meta name="twitter:card" content="summary_large_image" />
 
     <!--  Non-Essential, But Recommended -->
@@ -93,6 +87,13 @@
     </header>
     <!-- Header end -->
 
+    <div class="col-12 lg-hidden">
+      <div class="sidebar-icons">
+        <i id="showSideProfile" class="fa fa-bars"></i>
+        <i id="showSidebarSearch" class="fa fa-search"></i>
+      </div>
+    </div>
+
     <div class="page-content">
       <div class="row">
         <div class="col-lg-3">
@@ -100,7 +101,11 @@
             <div class="timeline-profile">
               <div class="profile-img">
                 <img src="assets/images/Ellipse 3.png" alt="" />
-                <div class="edit-pix">
+                <div
+                  class="edit-pix"
+                  data-bs-toggle="modal"
+                  data-bs-target="#profileImgModal"
+                >
                   <svg
                     width="13"
                     height="13"
@@ -160,14 +165,14 @@
               </ul>
               <h5>Minority group</h5>
               <ul class="timeline-group">
-                <li>Body Enhancement</li>
-                <li>Age</li>
+                <li>Body Enhancement <span>|</span></li>
+                <li>Age <span>|</span></li>
                 <li>Reglious</li>
               </ul>
             </div>
           </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-6 middleDiv">
           <div class="timeline-tab">
             <ul class="tab-nav">
               <li class="active" id="blabPostTab">
@@ -260,9 +265,18 @@
                           />
                         </svg>
                         <div class="share-options">
-                          <a href=""><i class="fab fa-facebook-f"></i></a>
-                          <a href=""><i class="fab fa-twitter"></i></a>
-                          <a href=""><i class="fab fa-linkedin-in"></i></a>
+                          <a href="" title="Share on Facebook"
+                            ><i class="fab fa-facebook-f"></i
+                          ></a>
+                          <a href="" title="Share on Twitter"
+                            ><i class="fab fa-twitter"></i
+                          ></a>
+                          <a href="" title="Share on Linkedin"
+                            ><i class="fab fa-linkedin-in"></i
+                          ></a>
+                          <a href="" title="Copy URL"
+                            ><i class="fa fa-copy"></i
+                          ></a>
                         </div>
                       </div>
                     </div>
@@ -350,9 +364,18 @@
                           />
                         </svg>
                         <div class="share-options">
-                          <a href=""><i class="fab fa-facebook-f"></i></a>
-                          <a href=""><i class="fab fa-twitter"></i></a>
-                          <a href=""><i class="fab fa-linkedin-in"></i></a>
+                          <a href="" title="Share on Facebook"
+                            ><i class="fab fa-facebook-f"></i
+                          ></a>
+                          <a href="" title="Share on Twitter"
+                            ><i class="fab fa-twitter"></i
+                          ></a>
+                          <a href="" title="Share on Linkedin"
+                            ><i class="fab fa-linkedin-in"></i
+                          ></a>
+                          <a href="" title="Copy URL"
+                            ><i class="fa fa-copy"></i
+                          ></a>
                         </div>
                       </div>
                     </div>
@@ -440,9 +463,18 @@
                           />
                         </svg>
                         <div class="share-options">
-                          <a href=""><i class="fab fa-facebook-f"></i></a>
-                          <a href=""><i class="fab fa-twitter"></i></a>
-                          <a href=""><i class="fab fa-linkedin-in"></i></a>
+                          <a href="" title="Share on Facebook"
+                            ><i class="fab fa-facebook-f"></i
+                          ></a>
+                          <a href="" title="Share on Twitter"
+                            ><i class="fab fa-twitter"></i
+                          ></a>
+                          <a href="" title="Share on Linkedin"
+                            ><i class="fab fa-linkedin-in"></i
+                          ></a>
+                          <a href="" title="Copy URL"
+                            ><i class="fa fa-copy"></i
+                          ></a>
                         </div>
                       </div>
                     </div>
@@ -530,9 +562,18 @@
                           />
                         </svg>
                         <div class="share-options">
-                          <a href=""><i class="fab fa-facebook-f"></i></a>
-                          <a href=""><i class="fab fa-twitter"></i></a>
-                          <a href=""><i class="fab fa-linkedin-in"></i></a>
+                          <a href="" title="Share on Facebook"
+                            ><i class="fab fa-facebook-f"></i
+                          ></a>
+                          <a href="" title="Share on Twitter"
+                            ><i class="fab fa-twitter"></i
+                          ></a>
+                          <a href="" title="Share on Linkedin"
+                            ><i class="fab fa-linkedin-in"></i
+                          ></a>
+                          <a href="" title="Copy URL"
+                            ><i class="fa fa-copy"></i
+                          ></a>
                         </div>
                       </div>
                     </div>
@@ -620,9 +661,18 @@
                           />
                         </svg>
                         <div class="share-options">
-                          <a href=""><i class="fab fa-facebook-f"></i></a>
-                          <a href=""><i class="fab fa-twitter"></i></a>
-                          <a href=""><i class="fab fa-linkedin-in"></i></a>
+                          <a href="" title="Share on Facebook"
+                            ><i class="fab fa-facebook-f"></i
+                          ></a>
+                          <a href="" title="Share on Twitter"
+                            ><i class="fab fa-twitter"></i
+                          ></a>
+                          <a href="" title="Share on Linkedin"
+                            ><i class="fab fa-linkedin-in"></i
+                          ></a>
+                          <a href="" title="Copy URL"
+                            ><i class="fa fa-copy"></i
+                          ></a>
                         </div>
                       </div>
                     </div>
@@ -710,9 +760,18 @@
                           />
                         </svg>
                         <div class="share-options">
-                          <a href=""><i class="fab fa-facebook-f"></i></a>
-                          <a href=""><i class="fab fa-twitter"></i></a>
-                          <a href=""><i class="fab fa-linkedin-in"></i></a>
+                          <a href="" title="Share on Facebook"
+                            ><i class="fab fa-facebook-f"></i
+                          ></a>
+                          <a href="" title="Share on Twitter"
+                            ><i class="fab fa-twitter"></i
+                          ></a>
+                          <a href="" title="Share on Linkedin"
+                            ><i class="fab fa-linkedin-in"></i
+                          ></a>
+                          <a href="" title="Copy URL"
+                            ><i class="fa fa-copy"></i
+                          ></a>
                         </div>
                       </div>
                     </div>
@@ -744,6 +803,9 @@
                       <div class="handle-info">
                         <h6>Francisco <span>@francisco</span></h6>
                         <ul>
+                          <li>sexual harrassment</li>
+                          <li>racism</li>
+                          <li>nepotism</li>
                           <li>sexual harrassment</li>
                           <li>racism</li>
                           <li>nepotism</li>
@@ -931,89 +993,133 @@
           </div>
         </div>
         <div class="col-lg-3">
-          <input
-            class="sidebar-search"
-            type="text"
-            name=""
-            id=""
-            placeholder="Search"
-          />
+          <div class="timeline-right-sidebar">
+            <input
+              class="sidebar-search"
+              type="text"
+              name=""
+              id=""
+              placeholder="Search"
+            />
 
-          <div class="follow-people">
-            <h5>Follow people of same interest</h5>
-            <ul>
-              <li class="follow">
-                <img src="assets/images/feature-1.png" alt="" />
-                <div class="follow-info">
-                  <div>
-                    <h5>Anonymous</h5>
-                    <p>Data analysis</p>
+            <div class="follow-people">
+              <h5>Follow people of same interest</h5>
+              <ul>
+                <li class="follow">
+                  <img src="assets/images/feature-1.png" alt="" />
+                  <div class="follow-info">
+                    <div>
+                      <h5>Anonymous</h5>
+                      <p>Data analysis</p>
+                    </div>
+                    <button type="button">Follow</button>
                   </div>
-                  <button type="button">Follow</button>
-                </div>
-              </li>
-              <li class="follow">
-                <img src="assets/images/Ellipse 3.png" alt="" />
-                <div class="follow-info">
-                  <div>
-                    <h5>Philip</h5>
-                    <p>Product design</p>
+                </li>
+                <li class="follow">
+                  <img src="assets/images/Ellipse 3.png" alt="" />
+                  <div class="follow-info">
+                    <div>
+                      <h5>Philip</h5>
+                      <p>Product design</p>
+                    </div>
+                    <button type="button">Follow</button>
                   </div>
-                  <button type="button">Follow</button>
-                </div>
-              </li>
-              <li class="follow">
-                <img src="assets/images/Ellipse 6.png" alt="" />
-                <div class="follow-info">
-                  <div>
-                    <h5>Courtney</h5>
-                    <p>Software Engineer</p>
+                </li>
+                <li class="follow">
+                  <img src="assets/images/Ellipse 6.png" alt="" />
+                  <div class="follow-info">
+                    <div>
+                      <h5>Courtney</h5>
+                      <p>Software Engineer</p>
+                    </div>
+                    <button type="button">Follow</button>
                   </div>
-                  <button type="button">Follow</button>
-                </div>
-              </li>
-            </ul>
-            <div class="link">
-              <a href="">See more</a>
+                </li>
+              </ul>
+              <div class="link">
+                <button class="more" type="button">See more</button>
+                <i class="fa fa-2x fa-spinner fa-spin"></i>
+              </div>
+            </div>
+
+            <div class="trending">
+              <h5>Trending</h5>
+              <ul>
+                <li class="trend">
+                  <p>1. Trending</p>
+                  <h6>Starbucks</h6>
+                  <span>22k Blab</span>
+                </li>
+                <li class="trend">
+                  <p>2. Trending</p>
+                  <h6>Airbnb</h6>
+                  <span>20k Blab</span>
+                </li>
+                <li class="trend">
+                  <p>3. Trending</p>
+                  <h6>Stargate</h6>
+                  <span>18k Blab</span>
+                </li>
+              </ul>
+              <div class="link">
+                <button class="more" type="button">See more</button>
+                <i class="fa fa-2x fa-spinner fa-spin"></i>
+              </div>
+            </div>
+
+            <div class="advert mt-5">ADVERTISEMENT</div>
+
+            <div class="sidebar-copyright">
+              <a href="terms-of-use.html">Terms</a> &nbsp; &nbsp;
+              <a href="privacy-policy.html">Privacy policy</a>
+              <p>
+                &copy; Copyright
+                <script>
+                  document.write(new Date().getFullYear());
+                </script>
+                BlabEmo.
+              </p>
             </div>
           </div>
+        </div>
+      </div>
+    </div>
 
-          <div class="trending">
-            <h5>Trending</h5>
-            <ul>
-              <li class="trend">
-                <p>1. Trending</p>
-                <h6>Starbucks</h6>
-                <span>22k Blab</span>
-              </li>
-              <li class="trend">
-                <p>2. Trending</p>
-                <h6>Airbnb</h6>
-                <span>20k Blab</span>
-              </li>
-              <li class="trend">
-                <p>3. Trending</p>
-                <h6>Stargate</h6>
-                <span>18k Blab</span>
+    <!-- Profile Img modal -->
+    <div
+      class="modal fade"
+      id="profileImgModal"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="exampleModalCenterTitle"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-content">
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="modal"
+            aria-label="Close"
+          ></button>
+          <div class="modal-body">
+            <h5 class="header">Profile Image</h5>
+            <div id="profile_img"></div>
+            <ul class="toolbox">
+              <li id="rotateLeft"><i class="fa fa-undo"></i></li>
+              <li id="rotateRight"><i class="fa fa-redo"></i></li>
+              <li id="crop"><i class="fa fa-cloud-upload-alt"></i></li>
+              <li>
+                <label for="image_upload">
+                  Browse
+                  <input
+                    id="image_upload"
+                    type="file"
+                    accept=".jpg, .png, .jpeg"
+                  />
+                </label>
               </li>
             </ul>
-            <div class="link">
-              <a href="">See more</a>
-            </div>
-          </div>
-
-          <div class="advert mt-5">ADVERTISEMENT</div>
-
-          <div class="sidebar-copyright">
-            <a href="terms-of-use.html">Terms</a> &nbsp; &nbsp;
-            <a href="privacy-policy.html">Privacy policy</a>
-            <p>
-              &copy; Copyright
-              <script>
-                document.write(new Date().getFullYear());
-              </script>
-              BlabEmo.
-            </p>
           </div>
         </div>
       </div>
@@ -1021,7 +1127,14 @@
 
     <script src="assets/js/jquery-3.6.0.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/sweetalert.min.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/js/all.min.js"
+      integrity="sha512-cyAbuGborsD25bhT/uz++wPqrh5cqPh1ULJz4NSpN9ktWcA6Hnh9g+CWKeNx2R0fgQt+ybRXdabSBgYXkQTTmA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="assets/js/croppie.min.js"></script>
+
     <script src="assets/js/main.js"></script>
   </body>
 </html>
