--- a/business-list.html
+++ b/business-list.html
@@ -21,14 +21,8 @@
       property="og:description"
       content="Grow your business with real-time reviews"
     />
-    <meta
-      property="og:image"
-      content="https://angry-goldberg-867093.netlify.app/assets/images/favicon.ico"
-    />
-    <meta
-      property="og:url"
-      content="https://angry-goldberg-867093.netlify.app/"
-    />
+    <meta property="og:image" content="assets/images/favicon.ico" />
+    <meta property="og:url" content="" />
     <meta name="twitter:card" content="summary_large_image" />
 
     <!--  Non-Essential, But Recommended -->
