--- a/email-templates/notifications.html
+++ b/email-templates/notifications.html
@@ -83,6 +83,13 @@
             }
         }
 
+        ul,
+        li {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+
         .social-icon {
             height: 40px;
             width: 40px;
@@ -95,11 +102,47 @@
             margin: 0 5px;
             cursor: pointer;
         }
-        .copyright{
+
+        .copyright {
             color: #232323;
             padding: 20px 0 40px;
             text-align: center;
             font-size: 13px;
+        }
+
+        .profile {
+            display: flex;
+            align-items: center;
+        }
+
+        .profile-img {
+            width: 80px;
+            height: 80px;
+        }
+
+        .profile-img img {
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+            border-radius: 50%;
+        }
+
+        .profile-info {
+            margin-left: 10px;
+            width: calc(100% - 80px);
+        }
+
+        .profile-info h5 {
+            color: #000000;
+            font-size: 14px;
+            font-family: "Montserrat-SemiBold";
+            margin: 0;
+        }
+
+        .profile-info p {
+            font-size: 12px;
+            color: #555555;
+            margin: 0;
         }
     </style>
 </head>
@@ -118,43 +161,43 @@
         background: #ffffff;
       ">
         <div style="padding: 50px 0; text-align: center">
-            <img src="assets/images/blabemo.png" alt="BlabEmo Logo" height="45px" />
+            <img src="../assets/images/blabemo.png" alt="BlabEmo Logo" height="45px" />
         </div>
         <div style="
-          background: url('assets/images/mail-header.svg') no-repeat center;
+          background: url('../assets/images/mail-header.svg') no-repeat center;
           background-size: cover;
-          padding: 40px 0;
+          padding: 20px 0;
           text-align: center;
           font-size: 28px;
           color: #303030;
           font-family: 'Montserrat-SemiBold';
         ">
-            Welcome to BlabEmo
+            Your notifications on BlabEmo
         </div>
-        <div style="padding: 50px;border-bottom: 1px solid #ececec;">
-            <h2 style="font-family: 'Montserrat-SemiBold'; color: #303030;font-size: 18px;font-weight: 600;">Hello, Wade
-                Warren</h2>
-            <p style="line-height: 2;">
-                Our firm is a long established fact that a reader will be distracted
-                by the readable of a page when looking at its layout the point of
-                using lorem ipsum is that it has a more orless normal distribution of
-                letters as opposed to using content here making it lookOur firm is a
-                long established fact that a reader will be distracted by the readable
-                of a page when looking at its layout the point of using lorem ipsum is
-                that it has a more orless normal distribution of letters as opposed to
-                using content here making it look the point of using lorem ipsum.
-            </p>
-            <button type="button"
-                style="border-radius: 3px;background-color: #ff6634;padding: 15px 20px;color: #ffffff;border: none;margin-top: 10px;cursor: pointer;">Activate
-                Your Acoount &nbsp; &#8594;</button>
+        <div style="width: 80%;margin:0 auto;">
+            <div style="padding: 30px;border-bottom: 1px solid #ececec;">
+                <div class="profile">
+                    <div class="profile-img">
+                        <img src="../assets/images/Ellipse 3.png" alt="">
+                    </div>
+                    <div class="profile-info">
+                        <h5>Hi</h5>
+                        <p>Johnson</p>
+                    </div>
+                </div>
+                <h3 style="font-family: 'Montserrat-Bold';color: #555555;font-size: 28px;">You've got 3 recent notifications on BlabEmo</h3>
+                <button type="button"
+                style="border-radius: 3px;background-color: #ff6634;padding: 15px 20px;color: #ffffff;border: none;cursor: pointer;">Take a Look</button>
+
+            </div>
+            <div style="border-bottom: 1px solid #ececec;padding: 30px 0 50px;text-align: center;">
+                <p style="color: #303030;font-family: 'Montserrat-SemiBold';font-size: 18px;">Stay in touch</p>
+                <i class="fab fa-facebook-f social-icon"></i>
+                <i class="fab fa-twitter social-icon"></i>
+                <i class="fab fa-linkedin-in social-icon"></i>
+            </div>
+            <p class="copyright">© Copyright 2021 BlabEmo.</p>
         </div>
-        <div style="border-bottom: 1px solid #ececec;padding: 30px 0 50px;text-align: center;">
-            <p style="color: #303030;font-family: 'Montserrat-SemiBold';font-size: 18px;">Stay in touch</p>
-            <i class="fab fa-facebook-f social-icon"></i>
-            <i class="fab fa-twitter social-icon"></i>
-            <i class="fab fa-linkedin-in social-icon"></i>
-        </div>
-        <p class="copyright">© Copyright 2021 BlabEmo.</p>
 </body>
 
 </html>
