Week 4 Milestones completed

--- a/timeline.html
+++ b/timeline.html
@@ -99,6 +99,9 @@
       <div class="row">
         <div class="col-lg-3">
           <div class="timeline-left-sidebar">
+            <div class="lg-hidden">
+              <span class="close">&times;</span>
+            </div>
             <div class="timeline-profile">
               <div class="profile-img">
                 <img src="assets/images/Ellipse 3.png" alt="" />
@@ -835,6 +838,9 @@
         </div>
         <div class="col-lg-3">
           <div class="timeline-right-sidebar">
+            <div class="lg-hidden">
+              <span class="close">&times;</span>
+            </div>
             <input
               class="sidebar-search"
               type="text"
