--- a/timeline-post.html
+++ b/timeline-post.html
@@ -98,6 +98,9 @@
       <div class="row">
         <div class="col-lg-3">
           <div class="timeline-left-sidebar">
+            <div class="lg-hidden">
+              <span class="close">&times;</span>
+            </div>
             <div class="timeline-profile">
               <div class="profile-img">
                 <img src="assets/images/Ellipse 3.png" alt="" />
@@ -1376,6 +1379,9 @@
         </div>
         <div class="col-lg-3">
           <div class="timeline-right-sidebar">
+            <div class="lg-hidden">
+              <span class="close">&times;</span>
+            </div>
             <input
               class="sidebar-search"
               type="text"
