--- a/business-details.html
+++ b/business-details.html
@@ -52,6 +52,13 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css"
+      integrity="sha512-mSYUmp1HYZDFaVKK//63EcZq4iFWFjxSL+Z3T/aCt4IO9Cejm03q3NKKYN6pFQzY0SBOr8h+eCIAZHPXcpZaNw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
@@ -314,6 +321,13 @@
                     rows="10"
                     placeholder="Write review..."
                   ></textarea>
+
+                  <input
+                    type="text"
+                    name=""
+                    id="year"
+                    placeholder="Year of Occurence"
+                  />
 
                   <div class="recaptcha">
                     <div
@@ -1007,9 +1021,22 @@
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/sweetalert.min.js"></script>
     <script src="https://www.google.com/recaptcha/api.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"
+      integrity="sha512-T/tUfKSV1bihCnd+MxKD0Hm1uBBroVYBOYSk1knyvQ9VyZJpc/ALb4P0r6ubwVPSGB2GvjeoMAJJImBG12TiaQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="assets/js/main.js"></script>
 
     <script>
+      $("#year").datepicker({
+        format: "yyyy",
+        viewMode: "years",
+        minViewMode: "years",
+        autoclose: true,
+      });
+
       let ratingVal = null;
       $("input[type=radio][name=rating]").change(function () {
         let val = this.value;
