--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <meta property="fb:app_id" content="your_app_id" />
     <meta name="twitter:site" content="@website-username" />
 
-    <title>Blabemo - Grow your business with real-time reviews</title>
+    <title>PennyTree - Lifestyle and Finance are not Mutually Exclusive</title>
 
     <!-- favicon -->
     <link
