--- a/timeline-post.html
+++ b/timeline-post.html
@@ -124,15 +124,15 @@
               <div class="timeline-stats">
                 <div class="stat">
                   <h3>25M</h3>
-                  <p>No of reviews</p>
+                  <p>Reviews</p>
                 </div>
                 <div class="stat">
                   <h3>45</h3>
-                  <p>No of blabs</p>
+                  <p>Blabs</p>
                 </div>
                 <div class="stat">
                   <h3>15K</h3>
-                  <p>No of re-blabs</p>
+                  <p>Re-blabs</p>
                 </div>
               </div>
             </div>
