--- a/timeline.html
+++ b/timeline.html
@@ -129,15 +129,15 @@
               <div class="timeline-stats">
                 <div class="stat">
                   <h3>25M</h3>
-                  <p>No of reviews</p>
+                  <p>Reviews</p>
                 </div>
                 <div class="stat">
                   <h3>45</h3>
-                  <p>No of blabs</p>
+                  <p>Blabs</p>
                 </div>
                 <div class="stat">
                   <h3>15K</h3>
-                  <p>No of re-blabs</p>
+                  <p>Re-blabs</p>
                 </div>
               </div>
             </div>
@@ -405,6 +405,7 @@
                   Great place to work with the good work culture and people
                   skills by the readable of a page when looking at its layout
                   the point of using lorem ipsum is that it has a more
+                  <span class="year-of-occurence"><i class="fa fa-calendar-alt"></i> 2000</span>
                 </p>
                 <ul class="blab-tags">
                   <li>racism</li>
