--- a/upload-cv.html
+++ b/upload-cv.html
@@ -184,7 +184,9 @@
                     <input type="text" placeholder="Annual Income" />
                   </div>
                   <div class="col-md-6">
-                    <input type="text" placeholder="Currency " />
+                    <select name="" id="">
+                      <option value="" selected disabled>Currency</option>
+                    </select>
                   </div>
                 </div>
 
