--- a/timeline.html
+++ b/timeline.html
@@ -405,7 +405,9 @@
                   Great place to work with the good work culture and people
                   skills by the readable of a page when looking at its layout
                   the point of using lorem ipsum is that it has a more
-                  <span class="year-of-occurence"><i class="fa fa-calendar-alt"></i> 2000</span>
+                  <span class="year-of-occurence"
+                    ><i class="fa fa-calendar-alt"></i> 2000</span
+                  >
                 </p>
                 <ul class="blab-tags">
                   <li>racism</li>
